dev/assets/css/global.css
html {
  position: relative;
  min-height: 100%;
}

body {
  background: url('/assets/media/image/bg.svg') no-repeat;
  background-size: contain;
  overflow-y: scroll;
}

::selection {
  background: #cd2027; /* WebKit/Blink Browsers */
  color: white;
}

#legal_footer {
  margin-top: 2em;
  padding-left: 0.5rem;
  background-color: #f8f9fa;
  padding: 1em;
  box-shadow: 0px 3px 15px -2px rgba(0, 0, 0, 0.75);
  align-items: center;
  position: absolute;
  bottom: 0;
  width: 100%;
}

#legal_text {
  margin-top: 0.75em;
}

#legal_footer > div > .media {
  align-items: flex-end;
}

#legal_footer > div > div > .media-body {
  flex: 0 1 auto;
}

#legal_footer > div > div > div > a {
  text-decoration: underline;
}

.btn-footer {
  padding: 0.375rem;
}

.btn-footer > svg {
  vertical-align: middle;
}

#brand-area {
  position: relative;
}

a:hover svg path {
  transition: 200ms;
  transition-timing-function: ease-in-out;
  fill: #cd2027;
}

#beta-stamp {
  position: absolute;
  bottom: 0;
  right: 0;
  text-transform: uppercase;
  font-weight: bold;
  transform: rotate(-10deg);
  background-color: rgba(255, 255, 255, 0.5);
}

.navbar-light .navbar-nav .nav-link:hover {
  transition: 100ms;
  transition-timing-function: ease-in-out;
  color: #cd2027;
}

.dropdown-item:hover:not(.disabled) {
  transition: 100ms;
  transition-timing-function: ease-in-out;
  color: #cd2027;
}

.dropdown-item.disabled {
  cursor: default;
}

.dropdown-item.active,
.dropdown-item:active {
  color: #000;
  text-decoration: none;
  background-color: #efefef;
}
@media (max-width: 576px) {
  #legal_footer {
    height: auto;
  }

  body {
    margin-bottom: 250px;
  }
}

@media (min-width: 576px) {
  #legal_footer {
    height: 160px;
  }

  body {
    margin-bottom: 180px;
  }
}

@media (min-width: 768px) {
  body {
    background-size: auto;
  }

  body {
    margin-bottom: 150px;
  }

  #legal_footer {
    height: 130px;
  }
}

@media (min-width: 992px) {
  body {
    margin-bottom: 130px;
  }

  #legal_footer {
    height: 110px;
  }
}

@media (min-width: 1200px) {
  body {
    margin-bottom: 120px;
  }

  #legal_footer {
    height: 100px;
  }
}

